src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Credit Check</fullName>
        <description>Send to credit</description>
        <isActive>false</isActive>
        <values>
            <fullName>Approved Converted</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Inquiry</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Sent To Field</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>End User Prospect</fullName>
        <description>Process to enter and qualify end user prospects</description>
        <isActive>true</isActive>
        <values>
            <fullName>D - Disqualified</fullName>
        </values>
        <values>
            <fullName>L1 - Inquiry</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>L2 - Qualifying</fullName>
        </values>
        <values>
            <fullName>L5 - Approved%2FConverted</fullName>
        </values>
        <values>
            <fullName>L6 - Weartest</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Initial Contact</fullName>
        <description>Contact lead for processing</description>
        <isActive>false</isActive>
        <values>
            <fullName>Approved Converted</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Inquiry</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Sent To Field</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Retailer%2FDistributor Qualification</fullName>
        <description>Process for retailers and distributors that are applying</description>
        <isActive>true</isActive>
        <values>
            <fullName>D - Disqualified</fullName>
        </values>
        <values>
            <fullName>L1 - Inquiry</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>L2 - Qualifying</fullName>
        </values>
        <values>
            <fullName>L3 - Application Sent</fullName>
        </values>
        <values>
            <fullName>L4 - Credit Review</fullName>
        </values>
        <values>
            <fullName>L5 - Approved%2FConverted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brand_Competitors__c</fullName>
        <label>Brand Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ariat</fullName>
                </value>
                <value>
                    <fullName>Bulwark</fullName>
                </value>
                <value>
                    <fullName>CAT</fullName>
                </value>
                <value>
                    <fullName>Cinch</fullName>
                </value>
                <value>
                    <fullName>Columbia</fullName>
                </value>
                <value>
                    <fullName>Dickies</fullName>
                </value>
                <value>
                    <fullName>Dragon Wear</fullName>
                </value>
                <value>
                    <fullName>DriFire</fullName>
                </value>
                <value>
                    <fullName>Key</fullName>
                </value>
                <value>
                    <fullName>Kuhl</fullName>
                </value>
                <value>
                    <fullName>Lapco</fullName>
                </value>
                <value>
                    <fullName>Lee</fullName>
                </value>
                <value>
                    <fullName>Levi</fullName>
                </value>
                <value>
                    <fullName>North Face</fullName>
                </value>
                <value>
                    <fullName>NSA</fullName>
                </value>
                <value>
                    <fullName>Private label</fullName>
                </value>
                <value>
                    <fullName>Rasco</fullName>
                </value>
                <value>
                    <fullName>RedKap</fullName>
                </value>
                <value>
                    <fullName>Riverside/Affinity</fullName>
                </value>
                <value>
                    <fullName>Tecgen</fullName>
                </value>
                <value>
                    <fullName>Tyndale</fullName>
                </value>
                <value>
                    <fullName>Under Armour</fullName>
                </value>
                <value>
                    <fullName>Walls</fullName>
                </value>
                <value>
                    <fullName>Workrite</fullName>
                </value>
                <value>
                    <fullName>Wrangler/Riggs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <description>Channel Type list based off of the Carhartt ACS list</description>
        <label>Channel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clothing</fullName>
                </value>
                <value>
                    <fullName>Department Store</fullName>
                </value>
                <value>
                    <fullName>Discount Store</fullName>
                </value>
                <value>
                    <fullName>Farm Store</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Promotional</fullName>
                </value>
                <value>
                    <fullName>Sporting Goods</fullName>
                </value>
                <value>
                    <fullName>Western</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CA - Catalog</fullName>
                </value>
                <value>
                    <fullName>DC - Discount Sales</fullName>
                </value>
                <value>
                    <fullName>DP - Department Store</fullName>
                </value>
                <value>
                    <fullName>EM - Employee</fullName>
                </value>
                <value>
                    <fullName>FS - Farm Store</fullName>
                </value>
                <value>
                    <fullName>GS - General Store</fullName>
                </value>
                <value>
                    <fullName>HA - House Account</fullName>
                </value>
                <value>
                    <fullName>HW - Hardware</fullName>
                </value>
                <value>
                    <fullName>ID - Industrial</fullName>
                </value>
                <value>
                    <fullName>IN - International</fullName>
                </value>
                <value>
                    <fullName>IS - Inside Sales</fullName>
                </value>
                <value>
                    <fullName>IT - Internal</fullName>
                </value>
                <value>
                    <fullName>MC - Misc</fullName>
                </value>
                <value>
                    <fullName>OD - Outdoor</fullName>
                </value>
                <value>
                    <fullName>SG - Sporting Goods</fullName>
                </value>
                <value>
                    <fullName>SP - Special</fullName>
                </value>
                <value>
                    <fullName>SR - Sales Representative</fullName>
                </value>
                <value>
                    <fullName>WB - Web/E-Commerce</fullName>
                </value>
                <value>
                    <fullName>WC - Work Wear</fullName>
                </value>
                <value>
                    <fullName>WS - Wholesale.com</fullName>
                </value>
                <value>
                    <fullName>WW - Western</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1000_More</fullName>
                    <label>1000 More</label>
                </value>
                <value>
                    <fullName>250-999</fullName>
                </value>
                <value>
                    <fullName>100-250</fullName>
                </value>
                <value>
                    <fullName>Below_100</fullName>
                    <label>Below 100</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competing_Lines__c</fullName>
        <inlineHelpText>Select one or more competitors that this distributor carries</inlineHelpText>
        <label>Competing Lines</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aramark</fullName>
                </value>
                <value>
                    <fullName>Bulwark</fullName>
                </value>
                <value>
                    <fullName>Cintas</fullName>
                </value>
                <value>
                    <fullName>Dakota</fullName>
                </value>
                <value>
                    <fullName>DriFire</fullName>
                </value>
                <value>
                    <fullName>G&amp;K</fullName>
                </value>
                <value>
                    <fullName>Lapco</fullName>
                </value>
                <value>
                    <fullName>NSA</fullName>
                </value>
                <value>
                    <fullName>Rasco</fullName>
                </value>
                <value>
                    <fullName>Riverside</fullName>
                </value>
                <value>
                    <fullName>Tyndale</fullName>
                </value>
                <value>
                    <fullName>Unifirst</fullName>
                </value>
                <value>
                    <fullName>Walls</fullName>
                </value>
                <value>
                    <fullName>Workrire</fullName>
                </value>
                <value>
                    <fullName>Wrangler</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Notes__c</fullName>
        <inlineHelpText>Enter notes on competitors and sales volumes, if known</inlineHelpText>
        <label>Competitor Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <label>Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Suppliers__c</fullName>
        <label>Current Suppliers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aramark</fullName>
                </value>
                <value>
                    <fullName>Bulwark</fullName>
                </value>
                <value>
                    <fullName>Carhartt</fullName>
                </value>
                <value>
                    <fullName>Cintas</fullName>
                </value>
                <value>
                    <fullName>Dakota</fullName>
                </value>
                <value>
                    <fullName>DriFire</fullName>
                </value>
                <value>
                    <fullName>G&amp;K</fullName>
                </value>
                <value>
                    <fullName>Lapco</fullName>
                </value>
                <value>
                    <fullName>NSA</fullName>
                </value>
                <value>
                    <fullName>Rasco</fullName>
                </value>
                <value>
                    <fullName>Riverside</fullName>
                </value>
                <value>
                    <fullName>Tyndale</fullName>
                </value>
                <value>
                    <fullName>Unifirst</fullName>
                </value>
                <value>
                    <fullName>Walls</fullName>
                </value>
                <value>
                    <fullName>Workrite</fullName>
                </value>
                <value>
                    <fullName>Wrangler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department_Adjacency__c</fullName>
        <label>Department Adjacency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disqual_Reason__c</fullName>
        <inlineHelpText>Select primary reason lead was not approved</inlineHelpText>
        <label>Disqual Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bad Credit</fullName>
                </value>
                <value>
                    <fullName>Competes w/ Current Distributor</fullName>
                </value>
                <value>
                    <fullName>No Long Term Vision</fullName>
                </value>
                <value>
                    <fullName>Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>No Paperwork</fullName>
                </value>
                <value>
                    <fullName>Poor Revenue Potential</fullName>
                </value>
                <value>
                    <fullName>Short Term / Active Bid</fullName>
                </value>
                <value>
                    <fullName>In Direct Purchase Program</fullName>
                </value>
                <value>
                    <fullName>No Products to Cover Needs</fullName>
                </value>
                <value>
                    <fullName>No Retail Storefront</fullName>
                </value>
                <value>
                    <fullName>Sufficient Coverage in Area</fullName>
                </value>
                <value>
                    <fullName>In Rental Program</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Opportunity_Type__c</fullName>
        <inlineHelpText>Will create this record type upon lead conversion.</inlineHelpText>
        <label>Expected Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Give/Get</fullName>
                </value>
                <value>
                    <fullName>Planning Cycle</fullName>
                </value>
                <value>
                    <fullName>Non-Planning Cycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>Sales Group</description>
        <label>Geography</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Geography</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Order__c</fullName>
        <description>Used for the Inside Sales Team to track the first order amount for reporting purposes to the Executive team.</description>
        <label>Initial Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interview_Rating__c</fullName>
        <label>Interview Rating</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Customers__c</fullName>
        <inlineHelpText>Enter key customers for this distributor (for FR)</inlineHelpText>
        <label>Key Customers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Leading_Line__c</fullName>
        <inlineHelpText>Which FR line does this distributor lead with? Why?</inlineHelpText>
        <label>Leading Line / Why?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Line_of_Credit__c</fullName>
        <inlineHelpText>Amount of credit approved</inlineHelpText>
        <label>Line of Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Local_Competitors__c</fullName>
        <label>Local Competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Merchandising_Standards__c</fullName>
        <label>Merchandising Standards</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exceeds</fullName>
                </value>
                <value>
                    <fullName>Meets</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes_and_Insights__c</fullName>
        <label>Notes and Insights</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Planned_Brand_Adjacency__c</fullName>
        <label>Planned Brand Adjacency</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ariat</fullName>
                </value>
                <value>
                    <fullName>Bulwark</fullName>
                </value>
                <value>
                    <fullName>CAT</fullName>
                </value>
                <value>
                    <fullName>Cinch</fullName>
                </value>
                <value>
                    <fullName>Columbia</fullName>
                </value>
                <value>
                    <fullName>Dickies</fullName>
                </value>
                <value>
                    <fullName>Dragon Wear</fullName>
                </value>
                <value>
                    <fullName>DriFire</fullName>
                </value>
                <value>
                    <fullName>Key</fullName>
                </value>
                <value>
                    <fullName>Kuhl</fullName>
                </value>
                <value>
                    <fullName>Lapco</fullName>
                </value>
                <value>
                    <fullName>Lee</fullName>
                </value>
                <value>
                    <fullName>Levi</fullName>
                </value>
                <value>
                    <fullName>North Face</fullName>
                </value>
                <value>
                    <fullName>NSA</fullName>
                </value>
                <value>
                    <fullName>Private label</fullName>
                </value>
                <value>
                    <fullName>Rasco</fullName>
                </value>
                <value>
                    <fullName>RedKap</fullName>
                </value>
                <value>
                    <fullName>Riverside/Affinity</fullName>
                </value>
                <value>
                    <fullName>Tecgen</fullName>
                </value>
                <value>
                    <fullName>Tyndale</fullName>
                </value>
                <value>
                    <fullName>Under Armor</fullName>
                </value>
                <value>
                    <fullName>Walls</fullName>
                </value>
                <value>
                    <fullName>Workrite</fullName>
                </value>
                <value>
                    <fullName>Wrangler/Riggs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Projected_Carhartt_FR_business__c</fullName>
        <inlineHelpText>Enter projected amount ($) of business that Carhartt FR will be for this distributor</inlineHelpText>
        <label>Projected Carhartt FR business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_FR__c</fullName>
        <formula>IF(ISNULL(AnnualRevenue),0,Projected_Carhartt_FR_business__c  /  AnnualRevenue)</formula>
        <inlineHelpText>Automatically calculated: Projected Carhartt FR business divided by Annual Revenue</inlineHelpText>
        <label>Projected FR %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Projected_Non_FR_business__c</fullName>
        <inlineHelpText>Enter projected amount ($) of business that Carhartt NON-FR will be for this distributor</inlineHelpText>
        <label>Projected Non-FR business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prospect_Type__c</fullName>
        <inlineHelpText>Place holder for lead conversion.</inlineHelpText>
        <label>Prospect Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Industrial Distributor</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating_Indicator__c</fullName>
        <formula>IMAGE( CASE(  Rating, &quot;1 Star&quot;, &quot;/img/samples/stars_100.gif&quot;, &quot;2 Star&quot;, &quot;/img/samples/stars_200.gif&quot;, &quot;3 Star&quot;, &quot;/img/samples/stars_300.gif&quot;, &quot;4 Star&quot;, &quot;/img/samples/stars_400.gif&quot;, &quot;5 Star&quot;, &quot;/img/samples/stars_500.gif&quot;, &quot;/img/samples/stars_000.gif&quot;), &quot;rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Applying__c</fullName>
        <inlineHelpText>Select primary reason for wanting to be a Carhartt FR distributor</inlineHelpText>
        <label>Reason for Applying</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Bid</fullName>
                </value>
                <value>
                    <fullName>Customers want Carhartt</fullName>
                </value>
                <value>
                    <fullName>Expanding Business</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Channels__c</fullName>
        <inlineHelpText>Select one or more sales channels for this distributor</inlineHelpText>
        <label>Sales Avenues</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Catalog</fullName>
                </value>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Field Sales</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Rep_Number__c</fullName>
        <inlineHelpText>011 - PAUL NOTO
012 - BRIAN BONIN
056 - LINDSAY PLETTA
083 - JOHN GOULD
084 - WEST Territory (Open)
092 - RICK HAWTHORNE
093 - GARY HARTSON
094 - Kelly Ross
098 - Lindsay Habermas
IND - Michelle Petrin
IND - Kiera Zink</inlineHelpText>
        <label>Sales Rep Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>002</fullName>
                </value>
                <value>
                    <fullName>004</fullName>
                </value>
                <value>
                    <fullName>005</fullName>
                </value>
                <value>
                    <fullName>006</fullName>
                </value>
                <value>
                    <fullName>007</fullName>
                </value>
                <value>
                    <fullName>008</fullName>
                </value>
                <value>
                    <fullName>009</fullName>
                </value>
                <value>
                    <fullName>010</fullName>
                </value>
                <value>
                    <fullName>011</fullName>
                </value>
                <value>
                    <fullName>012</fullName>
                </value>
                <value>
                    <fullName>013</fullName>
                </value>
                <value>
                    <fullName>014</fullName>
                </value>
                <value>
                    <fullName>015</fullName>
                </value>
                <value>
                    <fullName>016</fullName>
                </value>
                <value>
                    <fullName>017</fullName>
                </value>
                <value>
                    <fullName>018</fullName>
                </value>
                <value>
                    <fullName>020</fullName>
                </value>
                <value>
                    <fullName>021</fullName>
                </value>
                <value>
                    <fullName>022</fullName>
                </value>
                <value>
                    <fullName>023</fullName>
                </value>
                <value>
                    <fullName>024</fullName>
                </value>
                <value>
                    <fullName>025</fullName>
                </value>
                <value>
                    <fullName>026</fullName>
                </value>
                <value>
                    <fullName>027</fullName>
                </value>
                <value>
                    <fullName>028</fullName>
                </value>
                <value>
                    <fullName>029</fullName>
                </value>
                <value>
                    <fullName>030</fullName>
                </value>
                <value>
                    <fullName>031</fullName>
                </value>
                <value>
                    <fullName>032</fullName>
                </value>
                <value>
                    <fullName>033</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>01 - GARY SMITH</fullName>
                </value>
                <value>
                    <fullName>02 - BONNIE HICKS</fullName>
                </value>
                <value>
                    <fullName>03 - LLOYD SCHAEFFER</fullName>
                </value>
                <value>
                    <fullName>05 - JERRY GOLDBERG</fullName>
                </value>
                <value>
                    <fullName>06 - SCOTT ECKSTEIN</fullName>
                </value>
                <value>
                    <fullName>07 - MIKE COTA</fullName>
                </value>
                <value>
                    <fullName>08 - CHRISTIAN MARIN</fullName>
                </value>
                <value>
                    <fullName>09 - MARK PURYEAR</fullName>
                </value>
                <value>
                    <fullName>10 - LINAS NARUSIS</fullName>
                </value>
                <value>
                    <fullName>11 - PAUL NOTO</fullName>
                </value>
                <value>
                    <fullName>12 - BRIAN BONIN</fullName>
                </value>
                <value>
                    <fullName>13 - STEVE BARTLETT</fullName>
                </value>
                <value>
                    <fullName>14 - BARBARA YUNG</fullName>
                </value>
                <value>
                    <fullName>15 - RICHARD WOODRUFF</fullName>
                </value>
                <value>
                    <fullName>16 - ALAN BANKS</fullName>
                </value>
                <value>
                    <fullName>17 - JACK MITCHELL</fullName>
                </value>
                <value>
                    <fullName>18 - MCCALL PARKER</fullName>
                </value>
                <value>
                    <fullName>19 - JON STURDEVANT</fullName>
                </value>
                <value>
                    <fullName>20 - CRAIG FLORO</fullName>
                </value>
                <value>
                    <fullName>21 - PETER COOK</fullName>
                </value>
                <value>
                    <fullName>22 - PAUL CLARK</fullName>
                </value>
                <value>
                    <fullName>24 - CLAY COIL</fullName>
                </value>
                <value>
                    <fullName>25 - KEN ROVINSKY</fullName>
                </value>
                <value>
                    <fullName>26 - AARON MASON</fullName>
                </value>
                <value>
                    <fullName>27 - ADAM HOLT</fullName>
                </value>
                <value>
                    <fullName>28 - ANDY KRAUSE</fullName>
                </value>
                <value>
                    <fullName>29 - JAY STERNAD</fullName>
                </value>
                <value>
                    <fullName>30 - RICH PUSATERI</fullName>
                </value>
                <value>
                    <fullName>32 - KIP WILLIAMSON</fullName>
                </value>
                <value>
                    <fullName>33 - PAUL MCCORMACK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>